syntax = "proto3";

option java_multiple_files = true;
option java_package = "vn.zalopay.noradomi.helloworld";

package helloworld;

// The greeting service definition.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

